[gd_scene load_steps=10 format=3 uid="uid://duoyoi4vi66al"]

[ext_resource type="Script" uid="uid://cbtwsrtqv41hp" path="res://Croptails_scenes/objects/Plants/tomatoe.gd" id="1_houog"]
[ext_resource type="Texture2D" uid="uid://wl7qv3hq15wc" path="res://Croptails_assets/game/objects/basic_plants.png" id="1_y31jk"]
[ext_resource type="PackedScene" uid="uid://d3ctiikw60m0t" path="res://Croptails_scenes/objects/Plants/watering_particles.tscn" id="2_bg5t6"]
[ext_resource type="PackedScene" uid="uid://cyjxecskc70cr" path="res://Croptails_scenes/objects/Plants/flowering_particles.tscn" id="3_houog"]
[ext_resource type="PackedScene" uid="uid://q85js00v18t2" path="res://Croptails_scenes/objects/Plants/growth_cycle_component.tscn" id="4_84ek0"]
[ext_resource type="PackedScene" uid="uid://bq6sj8idafqnp" path="res://Croptails_scenes/components/hurt_component.tscn" id="5_uy78x"]
[ext_resource type="PackedScene" uid="uid://buae50gert8pe" path="res://Croptails_scenes/components/save_data_component.tscn" id="7_uy78x"]
[ext_resource type="Resource" uid="uid://c6uvvqh4a8jxt" path="res://resources/scene_data_resource.tres" id="8_jded8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jded8"]
size = Vector2(14, 7.5)

[node name="Tomatoe" type="Node2D"]
script = ExtResource("1_houog")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("1_y31jk")
hframes = 6
vframes = 2
frame = 7

[node name="WateringParticles" parent="." instance=ExtResource("2_bg5t6")]

[node name="FloweringParticles" parent="." instance=ExtResource("3_houog")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("4_84ek0")]

[node name="HurtComponent" parent="." instance=ExtResource("5_uy78x")]
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_jded8")

[node name="SaveDataComponent" parent="." instance=ExtResource("7_uy78x")]
save_data_resource = ExtResource("8_jded8")
